--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Welcome to Our IT Services Showcase</h1>
-    <p>Select an IT service to learn more:</p>
+    <p>Here are the services we provide:</p>
     <ul>
         <li><a href="#">Cloud Computing Services</a></li>
         <li><a href="#">Cybersecurity Solutions</a></li>
