Updated website with modern HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IT Services Showcase</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to Our IT Services Showcase</h1>
-    <p>Here are the services we provide:</p>
-    <ul>
-        <li><a href="#">Cloud Computing Services</a></li>
-        <li><a href="#">Cybersecurity Solutions</a></li>
-        <li><a href="#">Data Analytics Services</a></li>
-        <li><a href="#">Software Development</a></li>
-    </ul>
+    <div class="container">
+        <header>
+            <h1>Welcome to Our IT Services Showcase</h1>
+        </header>
+        <main>
+            <p>Here are the services we provide:</p>
+            <ul class="services-list">
+                <li><a href="#" class="service-link">Cloud Computing Services</a></li>
+                <li><a href="#" class="service-link">Cybersecurity Solutions</a></li>
+                <li><a href="#" class="service-link">Data Analytics Services</a></li>
+                <li><a href="#" class="service-link">Software Development</a></li>
+            </ul>
+        </main>
+    </div>
 </body>
 </html>
